tests/NormalTests/paczka1/small_fuzzy/15577481.err
Error in line 1: 6uULPc A649 70,1
Error in line 4: 6uULPc S339 59,4
Error in line 7: 6uULPc A826 21,1
